--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DinoGames</title>
+    <title>GameOfCash</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 
@@ -97,7 +97,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
 <body>
 
     <div class="container">
-        <img src="avatar.jpeg" alt="Avatar" class="avatar">
+        <img src="avatar.png" alt="Avatar" class="avatar">
         <h1>ENVIANOS UN WHATSAPP PARA CREAR TU CUENTA</h1>
         
         <!-- Botón con llamada a la función de JavaScript -->
