--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
     <style>
         body {
             font-family: 'Kanit', sans-serif;
-            background-color: #93268f;
+            background-color: #000000;
             text-align: center;
             color: white;
             margin: 0;
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
         }
 
         .cta-btn {
-            background-color: #a2d521;
+            background-color: #f8b343;
             color: white;
             padding: 25px 50px;
             font-size: 24px;
@@ -73,7 +73,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
         }
 
         .cta-btn:hover {
-            background-color: #04833c;
+            background-color: #f8b343;
             transform: scale(1.05);
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
         }
