--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
 <body>
 
     <div class="container">
-        <img src="avatar.png" alt="Avatar" class="avatar">
+        <img src="avatar.jpg" alt="Avatar" class="avatar">
         <h1>ENVIANOS UN WHATSAPP PARA CREAR TU CUENTA</h1>
         
         <!-- Botón con llamada a la función de JavaScript -->
