--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
         }
 
+        .leyenda p {
+	position: relative;
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+	font-size: 1em;
+	letter-spacing: 0.5px;
+	overflow: hidden;
+	background: linear-gradient(90deg, #efefef, #fff, #efefef);
+	background-repeat: no-repeat;
+	background-size: 80%;
+	animation: animate 3s linear infinite;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: rgba(255, 255, 255, 0);
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5), 0px 0px 10px rgba(255, 255, 255, 0.7);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	padding: 5px;
+	border-radius: 5px;
+}
+
         .whatsapp-icon {
             width: 40px;
             height: 40px;
@@ -106,7 +125,7 @@ src="https://www.facebook.com/tr?id=4012554902315479&ev=PageView&noscript=1"
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
-        <div class="footer">
+        <div class="leyenda">
             <p style="color: #efb810;">25% DE BONUS EN TU PRIMERA CARGA!!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
