--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@ src="https://www.facebook.com/tr?id=1060387358960304&ev=PageView&noscript=1"
         
         <!-- Botón con llamada a la función de JavaScript -->
         <a href="#" class="cta-btn" onclick="openRandomLink()">
-            <span>OBTENE TU 25% DE BONUS!</span>
+            <span>DUPLICA TU PRIMER CARGA</span>
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
         <div class="leyenda">
-            <p style="color: #efb810;">25% DE BONUS EN TU PRIMERA CARGA!!</p>
+            <p style="color: #efb810;">ESTAMOS DUPLICANDO TU PRIMERA CARGA!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
         </div>
