--- a/index.html
+++ b/index.html
@@ -77,16 +77,18 @@ src="https://www.facebook.com/tr?id=1060387358960304&ev=PageView&noscript=1"
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
         }
 
-        .leyenda p {
-	position: relative;
-	font-family: 'Montserrat', sans-serif;
-	text-transform: uppercase;
-	font-size: 1em;
-	letter-spacing: 0.5px;
-	overflow: hidden;
-	background: linear-gradient(90deg, #efefef, #fff, #efefef);
-	padding: 5px;
-	border-radius: 5px;
+.leyenda p {
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 1em;
+    letter-spacing: 0.5px;
+    overflow: hidden;
+    background: none;
+    color: #FFD700; /* Color dorado */
+    padding: 5px;
+    border-radius: 5px;
+    text-shadow: 0 0 10px rgba(255, 215, 0, 0.8); /* Brillo dorado */
 }
 
         .whatsapp-icon {
