--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@ src="https://www.facebook.com/tr?id=547861957413168&ev=PageView&noscript=1"
         
         <!-- Botón con llamada a la función de JavaScript -->
         <a href="#" class="cta-btn" onclick="openRandomLink()">
-            <span>DUPLICA TU PRIMER CARGA</span>
+            <span>OBTENE TU 25% EXTRA YA!</span>
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
         <div class="leyenda">
-            <p style="color: #efb810;">ESTAMOS DUPLICANDO TU PRIMERA CARGA!</p>
+            <p style="color: #efb810;">25% EN TU PRIMERA CARGA!!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
         </div>
@@ -130,18 +130,18 @@ src="https://www.facebook.com/tr?id=547861957413168&ev=PageView&noscript=1"
         function openRandomLink() {
             const links = [
 
-            "https://wa.link/febg7a",
-            "https://wa.link/a13fn6",
-            "https://wa.link/shitfz",
-            "https://wa.link/ofpnnu",
-            "https://wa.link/9dzxe8",
-            "https://wa.link/pjelba",
-            "https://wa.link/vb6c8t",
-            "https://wa.link/5a6wp3",
-            "https://wa.link/bch9nv",
-	    "https://wa.link/wp4yas",
-	    "https://wa.link/gbm403",
-	    "https://wa.link/vf2ged"
+            "https://wa.link/u1zfcu",   
+            "https://wa.link/n7o8ej",    
+            "https://wa.link/9wpfu7",    
+            "https://wa.link/fc2kqu",    
+            "https://wa.link/zgx1jf",    
+            "https://wa.link/nr5cxe",    
+            "https://wa.link/n0thfy",
+            "https://wa.link/16lfy6",    
+            "https://wa.link/dwg0yr",    
+	    "https://wa.link/fmgfqg",
+	    "https://wa.link/c3rqio",
+	    "https://wa.link/yxg9a9"
 
 
             
