--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ src="https://www.facebook.com/tr?id=547861957413168&ev=PageView&noscript=1"
         
         <!-- Botón con llamada a la función de JavaScript -->
         <a href="#" class="cta-btn" onclick="openRandomLink()">
-            <span>OBTENE TU 50% EXTRA YA!</span>
+            <span>DUPLICAMOS TU PRIMER CARGA!!</span>
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
