--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ src="https://www.facebook.com/tr?id=547861957413168&ev=PageView&noscript=1"
         </a>
 
         <div class="leyenda">
-            <p style="color: #efb810;">50% EN TU PRIMERA CARGA!!</p>
+            <p style="color: #efb810;">DUPLICAMOS TU PRIMER CARGA!!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
         </div>
