--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@ src="https://www.facebook.com/tr?id=547861957413168&ev=PageView&noscript=1"
         
         <!-- Botón con llamada a la función de JavaScript -->
         <a href="#" class="cta-btn" onclick="openRandomLink()">
-            <span>DUPLICAMOS TU PRIMER CARGA!!</span>
+            <span>RECLAMA TU BONO!!</span>
             <img src="whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
 
         <div class="leyenda">
-            <p style="color: #efb810;">DUPLICAMOS TU PRIMER CARGA!!</p>
+            <p style="color: #efb810;">50% DE BONO EN TU PRIMER CARGA!!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
         </div>
