--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ src="https://www.facebook.com/tr?id=1766546837196355&ev=PageView&noscript=1"
         </a>
 
         <div class="leyenda">
-            <p style="color: #efb810;">25% DE BONO EN TU PRIMER CARGA!!</p>
+            <p style="color: #efb810;">BONO EN TU PRIMER CARGA!!</p>
             <p>Mínimo de Carga $1000</p>
             <p>Ruleta en Vivo - Slots - Apuestas Deportivas y Mucho más.</p>
         </div>
